Change baseurl and url in site settings

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 title: SR
 logo: # You can add own logo. For example '/images/logo.png'.
 description: Rosemary and Steven's personal blogging website
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://siyu-lin.github.io/SR-Site" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/SR-Site" # the subpath of your site, e.g. /blog
+url: "https://siyu-lin.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 color_scheme: auto # You can choose three modes auto, light, and dark. By default, the auto mode is set, which means the user can choose the light or dark mode themself.
 
 
